# fastapi-monitoring-observability

./: .env.template  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: api.py  constants.py  correlation_id.py  error_handlers.py  exceptions.py  logging.py  main.py  middleware.py  otel.py  settings.py  utils.py
app/middleware/: logging.py  metrics.py
app/observability/: custom_metrics.py  logging.py  metrics.py  metrics_middleware.py  otel.py  otel_resource.py  tracing.py
app/routes/: __init__.py  errors.py  monotoring.py
docker/: loki-config.yml  otel-collector-config.yml  prometheus-config.yml  promtail-config.yml  tempo-config.yml
docker/grafana/provisioning/dashboards/: fastapi-observability-dashboard.json
docker/grafana/provisioning/datasources/: datasources.yml
docs/images/: .gitkeep
scripts/: generate_traffic.py
